[tool.poetry]
name = "portfolio-tracker"
version = "0.1.0"
description = ""
authors = ["Andrei Agaev <andagaev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.44"
pytelegrambotapi = "^4.23.0"
isort = "^5.13.2"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
